--- a/client/src/pages/SummaryPage.module.css
+++ b/client/src/pages/SummaryPage.module.css
@@ -53,7 +53,7 @@
 
 .instancesGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: 15px;
 }
 
